fix: adjust button too close to navbar and landing image cut out

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -919,7 +919,7 @@ h3 {
   .centered {
     position: absolute;
     width: 100%;
-    top: 55%;
+    top: 75%;
     left: 50%;
     z-index: 2;
     font-size: 60px;
@@ -927,7 +927,7 @@ h3 {
     transform: translate(-50%, -50%);
 
     @media (max-height: 1024px) {
-      top: 65%;
+      top: 75%;
     }
 
     @media (max-height: 850px) {
@@ -939,7 +939,7 @@ h3 {
     }
 
     @media (max-height: 732px) {
-      top: 53%;
+      top: 70%;
 
     }
 
@@ -968,7 +968,7 @@ h3 {
 
   .fighter-cover {
     object-fit: cover;
-    max-height: calc(100vh - 300px);
+    max-height: calc(100vh - 00px);
     min-height: calc(100vh - 300px);
     width: 100%;
   }
